XWIKI-20953: Edit autosave frequency visibility * Updated CSS * Fixed the error in the .js * Moved a flamingo patch to the main CSS of this element (since flamingo is supposed to be the main now anyways).

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
@@ -180,11 +180,6 @@ div.suggestItems .hide-button {
   }
 }
 
-// FIX: Auto-save
-.skin-flamingo #autosaveControl input.autosave-interval {
-  width: 3em;
-}
-
 // FIX: user profile
 .skin-flamingo {
   .user-menu-profile:before, .user-menu-preferences:before, .user-menu-watchlist:before, .user-menu-network:before, .user-menu-wikis:before, .user-menu-dashboard:before {
